bugfix: fixed vlan support (again) issue #1626

--- a/templates/default/vlan/vlanlist.html
+++ b/templates/default/vlan/vlanlist.html
@@ -11,7 +11,7 @@
                 {icon name="id" label="ID"}
             </td>
             <td>
-                {icon name="vlan" label="VID"}
+                {icon name="vlan" label="VLAN ID"}
             </td>
             <td>
                 {icon name="description" label="Description"}
@@ -19,15 +19,15 @@
             <td>
                 {icon name="customer" label="Assigned Customer"}
             </td>
-            <td class="text-right" class="lms-ui-box-buttons" data-popup-menu-title="{trans('sort by')}">
-                {buttons}
+            <td class="text-right" class="lms-ui-box-buttons" data-popup-menu-title="{trans('Sort by')}">
+                {buttons label="Sort by" type="button"}
                     {button type='link' icon="id" tip="ID" href="?m=vlanlist"}
                     {button type='link' icon="vlan" tip="VLAN ID" href="?m=vlanlist&orderby=vlanid"}
                     {button type='link' icon="description" tip="VLAN Description" href="?m=vlanlist&orderby=description"}
                     {button type='link' icon="customer" tip="Customer ID" href="?m=vlanlist&orderby=customerid"}
                 {/buttons}
 
-                {button type='link' name="addvlan" id="addvlanbtn" icon="add" accesskey="v"}
+                {button name="addvlan" id="addvlanbtn" icon="add" accesskey="v" label="Add"}
             </td>
         </tr>
     </thead>
