--- a/templates/default/customer/customereditbox.html
+++ b/templates/default/customer/customereditbox.html
@@ -318,7 +318,7 @@
 										<INPUT type="hidden" name="customerdata[tenexistencewarning]" value="1">
 										{/if}
 										{if !empty($gusapi_key)}
-											{button label="GUS API" icon="sync" class="gusapi-button" data-type="{\GusApi\SearchType::NIP}" href="#" tip="Click here to autocomplete company data from GUS REGON database"}
+											{button label="GUS" icon="search" class="gusapi-button" data-type="{\GusApi\SearchType::NIP}" href="#" tip="Click here to autocomplete company data from GUS REGON database"}
 										{/if}
 									</TD>
 								</TR>
@@ -327,7 +327,7 @@
 									<TD>
 										<INPUT type="text" value="{$customerinfo.regon}" name="customerdata[regon]" size="30" {tip text="Enter Business Registration Number (optional)" trigger="regon"}>
 										{if !empty($gusapi_key)}
-											{button label="GUS API" icon="sync" class="gusapi-button" data-type="{\GusApi\SearchType::REGON}" href="#" tip="Click here to autocomplete company data from GUS REGON database"}
+											{button label="GUS" icon="search" class="gusapi-button" data-type="{\GusApi\SearchType::REGON}" href="#" tip="Click here to autocomplete company data from GUS REGON database"}
 										{/if}
 									</TD>
 								</TR>
@@ -342,7 +342,7 @@
 									<TD>
 										<INPUT type="text" value="{$customerinfo.rbe}" name="customerdata[rbe]" size="30" {tip text="Enter National Court Register / Register of Business Entities Number (optional)" trigger="rbe"}>
 										{if !empty($gusapi_key)}
-											{button label="GUS API" icon="sync" class="gusapi-button" data-type="{\GusApi\SearchType::KRS}" href="#" tip="Click here to autocomplete company data from GUS REGON database"}
+											{button label="GUS" icon="search" class="gusapi-button" data-type="{\GusApi\SearchType::KRS}" href="#" tip="Click here to autocomplete company data from GUS REGON database"}
 										{/if}
 									</TD>
 								</TR>
