Revert "improvement: ui, changed >>> to buttons in customeradd/edit forms (#1898)"
This reverts commit 78c3c761c2bac32e058711016d5431b7eb0a7d85.

--- a/css/less/icons.less
+++ b/css/less/icons.less
@@ -709,15 +709,6 @@
   }
 }
 
-.lms-ui-icon-generate {
-  .fa-icon;
-  .fas;
-  .lms-ui-icon;
-  &:before {
-    content: @fa-var-random;
-  }
-}
-
 .lms-ui-icon-window-close {
   .fa-icon;
   .fas;
@@ -1027,7 +1018,7 @@
   }
 }
 
-.lms-ui-icon-reload, .lms-ui-icon-sync {
+.lms-ui-icon-reload {
   .fa-icon;
   .fas;
   .lms-ui-icon;
