devel: small visual fix

--- a/templates/default/customer/customerinfobox.html
+++ b/templates/default/customer/customerinfobox.html
@@ -197,7 +197,7 @@
 									{icon name="user-id-number"}
 								</TD>
 								<TD WIDTH="99%">
-									{trans("Identity type:")}: {trans($_IDENTITY_TYPES[$customerinfo.ict])}
+									{trans("Identity type:")} {trans($_IDENTITY_TYPES[$customerinfo.ict])}
 								</TD>
 							</TR>
 							<TR>
@@ -205,7 +205,7 @@
 									{icon name="user-id-number"}
 								</TD>
 								<TD WIDTH="99%">
-									{trans("Identity number:")}: {$customerinfo.icn}
+									{trans("Identity number:")} {$customerinfo.icn}
 								</TD>
 							</TR>
 						{/if}
