--- a/templates/default/event/eventschedulefilter.html
+++ b/templates/default/event/eventschedulefilter.html
@@ -25,7 +25,12 @@
 							{/foreach}
 						</SELECT>
 						{trans("User:")}
-						<SELECT size="1" name="a[]" OnChange="document.filter.submit();"
+						<label>
+							{trans("AND")}
+							<input type="hidden" name="userand" value="0">
+							<input type="checkbox" name="userand" value="1" onchange="document.filter.submit();"{if isset($filter.userand) && $filter.userand} checked{/if}>
+						</label>
+						<SELECT size="1" name="userid[]" OnChange="document.filter.submit();"
 								class="lms-ui-multiselect lms-ui-multiselect-filter" multiple
 								data-default-value="{trans("- all -")}">
 							<OPTION value="-1" {if is_array($filter.userid) && in_array('-1', $filter.userid)} selected{/if}
@@ -44,7 +49,7 @@
 							<OPTION value="2"{if $filter.privacy == "2"} selected{/if}>{trans("private")}</OPTION>
 						</SELECT>
 						{trans("Customer:")}
-						{customerlist form="filter" customers=$customers selected=$filter.customerid selectname="u" inputname="u" customOnChange="document.filter.submit();" customername=false}
+						{customerlist form="filter" customers=$customers selected=$filter.customerid selectname="customerid" inputname="customerid" customOnChange="document.filter.submit();" customername=false}
 						{button label="Today" onclick="location.href='?m=eventschedule&day={$smarty.now|date_format:"%d"}&month={$smarty.now|date_format:"%m"}&year={$smarty.now|date_format:"%Y"}';"}
 						<input type="text" name="date" class="lms-ui-date" value="{if $filter.year}{sprintf("%04d/%02d/%02d", $filter.year, $filter.month, $filter.day)}{/if}" onchange="document.filter.submit();">
 						{trans("Status:")}
