improvement: icon style copy to clipboard button change its look while mouse cursoer is over it

--- a/css/less/button.less
+++ b/css/less/button.less
@@ -175,3 +175,7 @@ a.lms-ui-link-button + button.lms-ui-button {
 td > button:last-child {
   margin-right: 0.5em;
 }
+
+i.lms-ui-button-clipboard:hover {
+  .lms-ui-icon-copy;
+}
