--- a/templates/default/event/eventschedulefilter.html
+++ b/templates/default/event/eventschedulefilter.html
@@ -39,7 +39,7 @@
 								{if !ConfigHelper::checkConfig('phpui.timetable_hide_disabled_users') || (ConfigHelper::checkConfig('phpui.timetable_hide_disabled_users') && $user.access) || is_array($filter.owner) && in_array($user.id, $filter.owner)}
 									<OPTION value="{$user.id}"
 										{if is_array($filter.userid) && in_array($user.id, $filter.userid)}} selected{/if}
-										{if !$user.access} data-blended{/if}>
+										{if !$user.access} data-crossed{/if}>
 											{$user.rname|truncate:40:"...":true} ({$user.login})
 									</OPTION>
 								{/if}
