devel: add 'lms-ui-crossed' css class which shows crossing text gently

--- a/css/less/lms-variables.less
+++ b/css/less/lms-variables.less
@@ -72,3 +72,6 @@
 @dialog-title: #333;
 @lms-img-path: "../img";
 @mobile-max-width: 800px;
+@crossed-text-decoration: line-through;
+@crossed-text-decoration-color: rgba(0, 0, 0, 0.2);
+@crossed-text-decoration-thickness: 0.2em;
