improvement: present not committed assignments with soft crossing line

--- a/css/style.less
+++ b/css/style.less
@@ -1224,7 +1224,7 @@ IMG		{ vertical-align: middle; border: 0; }
 }
 
 .lms-ui-assignment-not-commited {
-	text-decoration: line-through;
+	.lms-ui-crossed;
 }
 
 .lms-ui-document-closed {
