improvement: show promotion schema tariff assignment stats and allow to remove promotion and schema permanently

--- a/css/style.less
+++ b/css/style.less
@@ -1538,7 +1538,8 @@ table.lmsbox {
 }
 */
 
-table.lmsbox.lms-ui-background-cycle > tbody > tr {
+table.lmsbox.lms-ui-background-cycle > tbody > tr,
+table.lmsbox-inner.lms-ui-background-cycle > tbody > tr {
 	border-bottom: @dotted-line;
 	&.lms-ui-resource-deleted:not(.lms-ui-button-panel):not(.lms-ui-header-panel) {
 		&:nth-child(even) {
