--- a/templates/default/event/eventmodify.html
+++ b/templates/default/event/eventmodify.html
@@ -117,10 +117,20 @@
 						<SELECT name="event[userlist][]" class="lms-ui-multiselect" id="userlist" multiple data-default-value="{trans("- select user -")}"
 								data-shorten-to-default-value="false" {if !empty(ConfigHelper::checkConfig('phpui.event_user_required'))}required{/if}>
 							{foreach $userlist as $user}
-								{if !ConfigHelper::checkConfig('phpui.timetable_hide_disabled_users') || (ConfigHelper::checkConfig('phpui.timetable_hide_disabled_users')
-									&& $user.access) || is_array($filter.owner) && in_array($user.id, $filter.owner)}
-								<OPTION {if !$user.access} disabled{/if} value="{$user.id}" {if is_array($event.userlist) && in_array($user.id, $event.userlist)}selected{/if}
-									>{$user.rname|escape|truncate:40:"...":true} ({$user.login})</OPTION>
+								{if $layout.module == 'eventadd'}
+									{if $user.access}
+										<OPTION value="{$user.id}">
+											{$user.rname|escape|truncate:40:"...":true} ({$user.login})
+										</OPTION>
+									{/if}
+								{else}
+									{if $user.access || (is_array($event.userlist) && in_array($user.id, $event.userlist))}
+										<OPTION value="{$user.id}"
+											{if !$user.access} data-crossed{/if}
+											{if is_array($event.userlist) && in_array($user.id, $event.userlist)}selected{/if}>
+												{$user.rname|escape|truncate:40:"...":true} ({$user.login})
+										</OPTION>
+									{/if}
 								{/if}
 							{/foreach}
 						</SELECT>
