enhancement: allow to control period alignment for assignment bulk creation basing on promotion schema (changed ui label to 'full calendar periods')

--- a/templates/default/customer/customerassignmenthelper.html
+++ b/templates/default/customer/customerassignmenthelper.html
@@ -658,7 +658,7 @@
 							<br>
 							<label>
 								<INPUT type="checkbox" name="{$variable_prefix}[align-periods]" value="1"{if $variables['align-periods']} checked{/if}>
-								{trans("align periods")}
+								{trans("full calendar periods")}
 							</label>
 						</span>
 						{/if}
