enhancement: allow tie vlans with netnodes

--- a/css/less/icons.less
+++ b/css/less/icons.less
@@ -388,6 +388,15 @@
   }
 }
 
+.lms-ui-icon-sorting {
+  .fa-icon;
+  .fas;
+  .lms-ui-icon;
+  &:before {
+    content: @fa-var-sort;
+  }
+}
+
 .lms-ui-icon-ascending {
   .fa-icon;
   .fas;
