improvement: added FA to customerassignmentadd module

--- a/css/less/icons.less
+++ b/css/less/icons.less
@@ -1670,3 +1670,40 @@
     content: @fa-var-microchip;
   }
 }
+
+.lms-ui-icon-period,
+.lms-ui-icon-accounting {
+  .fa-icon;
+  .fas;
+  .lms-ui-icon;
+  &:before {
+    content: @fa-var-clock;
+  }
+}
+
+.lms-ui-icon-recipient {
+  .fa-icon;
+  .fas;
+  .lms-ui-icon;
+  &:before {
+    content: @fa-var-id-badge;
+  }
+}
+
+.lms-ui-icon-discount {
+  .fa-icon;
+  .fas;
+  .lms-ui-icon;
+  &:before {
+    content: @fa-var-percent;
+  }
+}
+
+.lms-ui-icon-quantity {
+  .fa-icon;
+  .fas;
+  .lms-ui-icon;
+  &:before {
+    content: @fa-var-grip-horizontal;
+  }
+}
