--- a/templates/default/customer/customerassignmenthelper.html
+++ b/templates/default/customer/customerassignmenthelper.html
@@ -135,7 +135,7 @@
 						<table id="a_promotions" style="display: none;">
 							<TR>
 								<TD>
-									<IMG src="img/promoschema.gif" alt="">
+									{icon name="money" class="fa-fw"}
 								</TD>
 								<TD class="bold">
 									{trans("Schema")}:
@@ -165,7 +165,7 @@
 							</TR>
 							<tr id="a_location" style="display: none;">
 								<td>
-									<img src="img/location.png" alt="">
+									{icon name="location" class="fa-fw"}
 								</td>
 								<td class="bold">
 									{trans("Location:")}
@@ -360,7 +360,7 @@
 
 							<TR id="a_count" style="display: none;">
 								<TD>
-									<IMG src="img/values.gif" alt="">
+									{icon name="quantity" class="fa-fw"}
 								</TD>
 								<TD class="bold nobr">
 									{trans("Count:")}
@@ -372,7 +372,7 @@
 
 							<TR id="a_name" style="display: none;">
 								<TD>
-									<IMG src="img/money.gif" alt="">
+									{icon name="description" class="fa-fw"}
 								</TD>
 								<TD class="bold nobr">
 									{trans("Name:")}
@@ -385,7 +385,7 @@
 
 							<TR id="a_attribute" style="display: none;">
 								<TD>
-									<IMG src="img/money.gif" alt="">
+									{icon name="tags" class="fa-fw"}
 								</TD>
 								<TD class="bold nobr">
 									{trans("Attribute:")}
@@ -397,7 +397,7 @@
 
 							<TR id="a_day" style="display: none;">
 								<TD>
-									<IMG src="img/calendar.gif" alt="">
+									{icon name="accounting" class="fa-fw"}
 								</TD>
 								<TD class="bold nobr">
 									{trans("Accounting:")}
@@ -432,7 +432,7 @@
 
 							<TR id="a_period">
 								<TD>
-									<IMG src="img/calendar.gif" alt="">
+									{icon name="period" class="fa-fw"}
 								</TD>
 								<TD class="bold nobr">
 									{trans("Period:")}
@@ -455,7 +455,7 @@
 
 							<TR id="a_value" style="display: none;">
 								<TD>
-									<IMG src="img/value.gif" alt="">
+									{icon name="money" class="fa-fw"}
 								</TD>
 								<TD class="bold">
 									{trans("Value:")}
@@ -474,7 +474,7 @@
 
 							<TR id="a_discount" style="display: none;">
 								<TD style="{if !ConfigHelper::checkConfig('privileges.superuser') && ConfigHelper::checkConfig('privileges.hide_finances')} display: none;{/if}">
-									<IMG src="img/value.gif" alt="">
+									{icon name="discount" class="fa-fw"}
 								</TD>
 								<TD class="bold" style="{if !ConfigHelper::checkConfig('privileges.superuser') && ConfigHelper::checkConfig('privileges.hide_finances')} display: none;{/if}">
 									<span class="bold">{trans("Discount:")}</span>
@@ -491,7 +491,7 @@
 
 							<TR id="a_type" style="display: none;">
 								<TD>
-									<IMG SRC="img/money.gif" alt="">
+									{icon name="type" class="fa-fw"}
 								</TD>
 								<TD>
 									{trans("Type:")}
@@ -506,7 +506,7 @@
 
 							<TR id="a_tax" style="display: none;">
 								<TD>
-									<IMG src="img/tax.gif" alt="">
+									{icon name="money" class="fa-fw"}
 								</TD>
 								<TD class="bold">
 									{trans("Tax:")}
@@ -522,7 +522,7 @@
 
 							<TR id="a_taxcategory" style="display: none;">
 								<TD>
-									<IMG src="img/tax.gif" alt="">
+									{icon name="money" class="fa-fw"}
 								</TD>
 								<TD class="bold">
 									<label for="taxcategory">
@@ -537,7 +537,7 @@
 
 							<TR id="a_productid" style="display: none;">
 								<TD>
-									<IMG src="img/class.gif" alt="">
+									{icon name="optional-info" class="fa-fw"}
 								</TD>
 								<TD class="bold">
 									{trans("Product ID:")}
@@ -550,7 +550,7 @@
 
 							<TR id="a_numberplan" style="display: none;">
 								<TD>
-									<IMG src="img/id.gif" alt="">
+									{icon name="id" class="fa-fw"}
 								</TD>
 								<TD class="bold nobr">
 									{trans("Numbering Plan:")}
@@ -569,7 +569,7 @@
 
 							<TR id="a_paytype" style="display: none;">
 								<TD>
-									<IMG src="img/print.gif" alt="">
+									{icon name="paytype" class="fa-fw"}
 								</TD>
 								<TD class="bold nobr">
 									{trans("Payment Type:")}
@@ -581,7 +581,7 @@
 
 							<tr id="a_address" style="display: none;">
 								<td>
-									<img src="img/info3.gif" alt="">
+									{icon name="recipient" class="fa-fw"}
 								</td>
 								<td class="bold">
 									<span class="bold">{trans("Recipient:")}</span>
@@ -614,7 +614,7 @@
 				<TBODY>
 				<TR id="a_options" style="display: none;">
 					<TD>
-						<IMG src="img/options.gif" alt="">
+						{icon name="options" class="fa-fw"}
 					</TD>
 					<TD class="bold">
 						{trans("Options:")}
@@ -667,7 +667,7 @@
 
 				<TR id="a_existingassignments" style="display: none;">
 					<TD>
-						<IMG src="img/money.gif" alt="">
+						{icon name="assignment" class="fa-fw"}
 					</TD>
 					<TD class="bold">
 						{trans("Existing assignments:")}
@@ -695,7 +695,7 @@
 				{if $customernodes}
 				<tr id="a_nodes" style="display: none;">
 					<td>
-						<img src="img/node.gif" alt="">
+						{icon name="node" class="fa-fw"}
 					</td>
 					<td class="bold">
 						{trans("Nodes:")}
@@ -720,7 +720,7 @@
 				{if $customernetdevnodes}
 				<tr id="a_netdevnodes" style="display: none;">
 					<td>
-						<img src="img/netdev.gif" alt="">
+						{icon name="netdev" class="fa-fw"}
 					</td>
 					<td class="bold">
 						{trans("Network Devices:")}
@@ -745,7 +745,7 @@
 				{if $voipaccounts}
 				<tr id="a_phones" style="display: none;">
 					<td>
-						<img src="img/voip.gif" alt="">
+						{icon name="phone" class="fa-fw"}
 					</td>
 					<td class="bold">
 						{trans("Phones:")}
