imporvement: added FA to whole promotion module

--- a/templates/default/promotion/promotionadd.html
+++ b/templates/default/promotion/promotionadd.html
@@ -11,7 +11,7 @@
 	<THEAD>
 	<TR>
 		<TD style="width: 1%;">
-			<IMG src="img/promo.gif" alt="">
+			{icon name="money" class="fa-fw"}
 		</TD>
 		<TD style="width: 1%;" class="bold">
 			{trans("Name:")}
@@ -24,7 +24,7 @@
 	<TBODY>
 	<TR>
 		<TD style="width: 1%;">
-			<IMG src="img/info1.gif" alt="">
+			{icon name="optional-info" class="fa-fw"}
 		</TD>
 		<TD style="width: 1%;" class="bold">
 			{trans("Description:")}
