--- a/templates/default/promotion/promotionedit.html
+++ b/templates/default/promotion/promotionedit.html
@@ -16,7 +16,7 @@
 	<THEAD>
 	<TR>
 		<TD>
-			<IMG src="img/promo.gif" alt="">
+			{icon name="money" class="fa-fw"}
 		</TD>
 		<TD class="bold">
 			{trans("Name:")}
@@ -34,7 +34,7 @@
 	<TBODY>
 	<TR>
 		<TD>
-			<IMG src="img/info1.gif" alt="">
+			{icon name="optional-info" class="fa-fw"}
 		</TD>
 		<TD class="bold">
 			{trans("Description:")}
