bugfix: icon handle was expecting img tag which is gone now

--- a/templates/default/promotion/promotionschemadata.html
+++ b/templates/default/promotion/promotionschemadata.html
@@ -401,7 +401,7 @@
 
 		$('#schematariffs').sortable({
 			items: 'tbody > tr.schematariff',
-			handle: 'img.drag-icon',
+			handle: 'i.drag-icon',
 			opacity: 0.9,
 			axis: 'y',
 			placeholder: 'light',
