--- a/templates/default/vlan/vlanlist.html
+++ b/templates/default/vlan/vlanlist.html
@@ -44,13 +44,13 @@
             <td>
                 {$v.vlanid}
             </td>
-            <td {tip text="{$v.description}"}>
+            <td {tip text=$v.description}>
                 {$v.description|truncate:40:" ...":true}
             </td>
-            <td {tip text="{$v.customername}"}>
+            <td {tip text=$v.customername}>
                 <a href="?m=customerinfo&id={$v.customerid}">{$v.customername|truncate:20:" ...":true}</a>
             </td>
-            <td {tip text="{$v.netnodename}"}>
+            <td {tip text=$v.netnodename}>
                 <a href="?m=netnodeinfo&id={$v.netnodeid}">{$v.netnodename|truncate:20:" ...":true}</a>
             </td>
             <td class="buttons">
